@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Handle a bunch of socket errors that can result from odd ICMP Type 3
+  Destination Unreachable messages received during service scanning. The crash
+  reported was "Unexpected error in NSE_TYPE_READ callback.  Error code: 92
+  (Protocol not available)" [Daniel Miller]
+
 o Fixed a crash (NULL pointer dereference) in PortList::isTCPwrapped when using
   -sV and -O on an unknown service not listed in nmap-services. [Pierre Lalet]
 
